--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,7 @@ block content
 
   div(id='map')
 
-  script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW6nfcW0gciSVpQ3oE4pnyP46hEGOzAq4&callback=initMap&libraries=&v=weekly", async)
+  script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW6nfcW0gciSVpQ3oE4pnyP46hEGOzAq4&callback=initialize&libraries=&v=weekly", async)
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
   script(src='/javascripts/search.js')
 
