--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -4,20 +4,27 @@
     
   }
 
-html {
-    height: 100%;
-}
 
-body {
+html, body {
     height: 100%;
     margin: 0;
 }
 
-#navbar-container {
+/* #navbar-container {
     position: absolute;
     z-index: 4;
     top: 0;
     color: white;
     font-size: x-large;
     margin-left: 20px;
+} */
+
+#userLocation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    transition: background 0.25s;
 }
