--- a/views/index.pug
+++ b/views/index.pug
@@ -12,33 +12,62 @@ html
 block content
   div(id='navbar-container')
     nav(class="navbar", role="navigation", aria-label="main navigation")
-      a(class="navbar-item", href="https://bulma.io")
-        img(src="https://bulma.io/images/bulma-logo.png",width="112",height="28")
-      a(role="button", class="navbar-burger", aria-label="menu", aria-expanded="false", data-target="navbarBasicExample")
-        span(aria-hidden="true")
-        span(aria-hidden="true")
-        span(aria-hidden="true")
-    
-      div(class="navbar-menu")
-        div(class="navbar-start")
-          a(class="navbar-item") Home 
-          a(class="navbar-item") Documentation
+      a(class="navbar-item", href="#")
+        img(src="/images/treechamp_logo.png",width="112",height="28")
       
       div(class="navbar-end")
         div(class="navbar-item")
           div(class="buttons")
-            a(class="button is-primary", id="signup") Sign up 
-            a(class="button is-primary", id="signup") Log in
-            a(class="button is-primary", id="signup") Log out
-              
+            if loggedin
+              a(class="button is-primary", id="logout") Log out
+            else 
+              a(class="button is-primary", id="login") Log in
+  
+  div(class="modal")
+    div(class="modal-background")
+    div(class="modal-content has-background-white py-5 px-5")
+      div(class="tabs is-boxed")
+        ul
+          li(id="login", class="is-active", data-target="login-content")
+            a Log in
+          li(id="signup", data-target="signup-content")
+            a Sign up
+          
+      div(class="px-2", id="tab-content")
+        div(id="login-content")
+          span(class="is-hidden", style="color:red") All fields are required!
+          div(class="field")
+            label(class="label") Username 
+            p(class="control")
+              input(class="input", type="text", placeholder="Username", id="login-username")            
+          div(class="field")
+            label(class="label") Password
+            p(class="control")
+              input(class="input", type="password", placeholder="Password", id="login-password")
+          div(class="field")
+            p(class="control")
+              button(class="button is-success", id="login-button", onClick="loginFunc()") Login
 
-    
+        div(id="signup-content",  class="is-hidden")
+          div(class="field")
+            span(class="is-hidden", style="color:red") All fields are required!
+            label(class="label") Username 
+            p(class="control")
+              input(class="input", type="text", placeholder="Username", id="signup-username")
+          div(class="field")
+            label(class="label") Password
+            p(class="control")
+              input(class="input", type="password", placeholder="Password",id="signup-password")
+          div(class="field")
+            p(class="control")
+            button(class="button is-success", id="signup-button", onClick="signupFunc()") Sign up
 
   div(id='map')
-
+  div(id="userLocation") 
+    button(class="button is-rounded is-primary" id="showNearbyTrees") Show nearby trees
+  
   script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDW6nfcW0gciSVpQ3oE4pnyP46hEGOzAq4&callback=initialize&libraries=&v=weekly", async)
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
   script(src='/javascripts/search.js')
-
 
 
