--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,7 @@
-doctype html
+//- Index.pug
+extends layout.pug 
 
-html
-  head 
-    title= title 
-    meta(charset="UTF-8")
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css')
+append css
     link(rel='stylesheet', href='/stylesheets/search.css')
 
 block content
