--- a/views/index.pug
+++ b/views/index.pug
@@ -16,46 +16,47 @@ block content
             if loggedin
               a(class="button is-primary", id="logout") Log out
             else 
+              a(class="button is-primary", id="register") Register
               a(class="button is-primary", id="login") Log in
-  
-  div(class="modal")
-    div(class="modal-background")
-    div(class="modal-content has-background-white py-5 px-5")
-      div(class="tabs is-boxed")
-        ul
-          li(id="login", class="is-active", data-target="login-content")
-            a Log in
-          li(id="signup", data-target="signup-content")
-            a Sign up
-          
-      div(class="px-2", id="tab-content")
-        div(id="login-content")
-          span(class="is-hidden", style="color:red") All fields are required!
-          div(class="field")
-            label(class="label") Username 
-            p(class="control")
-              input(class="input", type="text", placeholder="Username", id="login-username")            
-          div(class="field")
-            label(class="label") Password
-            p(class="control")
-              input(class="input", type="password", placeholder="Password", id="login-password")
-          div(class="field")
-            p(class="control")
-              button(class="button is-success", id="login-button", onClick="loginFunc()") Login
 
-        div(id="signup-content",  class="is-hidden")
-          div(class="field")
-            span(class="is-hidden", style="color:red") All fields are required!
-            label(class="label") Username 
-            p(class="control")
-              input(class="input", type="text", placeholder="Username", id="signup-username")
-          div(class="field")
-            label(class="label") Password
-            p(class="control")
-              input(class="input", type="password", placeholder="Password",id="signup-password")
-          div(class="field")
-            p(class="control")
-            button(class="button is-success", id="signup-button", onClick="signupFunc()") Sign up
+  //- div(class="modal")
+  //-   div(class="modal-background")
+  //-   div(class="modal-content has-background-white py-5 px-5")
+  //-     div(class="tabs is-boxed")
+  //-       ul
+  //-         li(id="login", class="is-active", data-target="login-content")
+  //-           a Log in
+  //-         li(id="signup", data-target="signup-content")
+  //-           a Sign up
+          
+  //-     div(class="px-2", id="tab-content")
+  //-       div(id="login-content")
+  //-         span(class="is-hidden", style="color:red") All fields are required!
+  //-         div(class="field")
+  //-           label(class="label") Username 
+  //-           p(class="control")
+  //-             input(class="input", type="text", placeholder="Username", id="login-username")            
+  //-         div(class="field")
+  //-           label(class="label") Password
+  //-           p(class="control")
+  //-             input(class="input", type="password", placeholder="Password", id="login-password")
+  //-         div(class="field")
+  //-           p(class="control")
+  //-             button(class="button is-success", id="login-button", onClick="loginFunc()") Login
+
+  //-       div(id="signup-content",  class="is-hidden")
+  //-         div(class="field")
+  //-           span(class="is-hidden", style="color:red") All fields are required!
+  //-           label(class="label") Username 
+  //-           p(class="control")
+  //-             input(class="input", type="text", placeholder="Username", id="signup-username")
+  //-         div(class="field")
+  //-           label(class="label") Password
+  //-           p(class="control")
+  //-             input(class="input", type="password", placeholder="Password",id="signup-password")
+  //-         div(class="field")
+  //-           p(class="control")
+  //- button(class="button is-success", id="signup-button", onClick="signupFunc()") Sign up
 
   div(id='map')
   div(id="userLocation") 
