--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,4 +16,5 @@ html
      
     block scripts
       script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js")
+      script(src="/javascripts/navbar.js")
 
