Basic design for pages finished

--- a/views/includes/loginform.pug
+++ b/views/includes/loginform.pug
@@ -7,7 +7,7 @@ section.hero.is-primary.is-fullheight
         .column.is-5-tablet.is-4-desktop.is-3-widescreen
           form.box#loginform(action="")
             .field
-              label.label(for="") Email
+              label.label(for="") Username
               .control.has-icons-left
                 input(type="email" placeholder="e.g. bobsmith@gmail.com" class="input" required)
                 span(class="icon is-small is-left")
