--- a/views/includes/loginform.pug
+++ b/views/includes/loginform.pug
@@ -20,3 +20,4 @@ section.hero.is-primary.is-fullheight
                   i(class="fa fa-lock")
             .field
               button(class="button is-success") Login
+              a(href="/") Home page
