--- a/public/stylesheets/tree.css
+++ b/public/stylesheets/tree.css
@@ -10,3 +10,11 @@ html,body {
 #map {
     height: 100%;
 }
+
+@media only screen and (max-width: 752px) {
+    #map {
+        height: 300px;
+        width: 100%;
+    }
+}
+
