--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
       meta(http-equiv='X-UA-Compatible', content='IE=edge')
       meta(name='viewport', content='width=device-width, initial-scale=1')
     block css
-      link(rel='stylesheet', href='/css/bootstrap.min.css')
+      //link(rel='stylesheet', href='/css/bootstrap.min.css')
       link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css')
       link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous")
 
