--- a/views/register.pug
+++ b/views/register.pug
@@ -13,16 +13,27 @@ block content
                                     input(type="text" , id = "username", placeholder="Aravinth", class="input", required)
                                     span(class="icon is-small is-left")
                                         i(class="fa fa-envelope")
+                                
                             .field
                                 label(for="" class="label") Password
                                 .control.has-icons-left
                                     input(type="password", id="password", placeholder="*******", class="input", required)
                                     span(class="icon is-small is-left")
                                         i(class="fa fa-lock")
+                                
                             .field
                                 label(for="" class="checkbox") #[input(type='checkbox', id="remember", name='hidden', value=0, checked='')] Remember me
                             .field
                                 button(class="button is-success", id="register-button") Register 
+        .modal#success-modal
+            .modal-background 
+            .modal-content
+                .box You are now logged in! Redirecting....
+
+        .modal#error-modal
+            .modal-background 
+            .modal-content
+                .box Username already taken!  
 
 block append scripts 
     script(src="/javascripts/user.js")
