--- a/views/tree.pug
+++ b/views/tree.pug
@@ -9,7 +9,7 @@ block content
         .container   
             .section
                 .container 
-                    .columns.is-mobile
+                    .columns
                         .map-container.column.is-7
                             #map
                         .details-container.column.is-5
