--- a/views/updates.pug
+++ b/views/updates.pug
@@ -1,10 +1,28 @@
 extends layout 
 
 block content
-    .container 
-        .columns.is-mobile
-            each update in updates
-                .column
-                    include includes/card.pug 
+    .overall-container 
+        include includes/navbar.pug 
+        .section 
+            if updatesFound
+                .container
+                    h1.title Updates 
+                    .update-container 
+                        .container
+                            .columns 
+                                each update in updates
+                                    .column
+                                        include includes/card.pug  
+            else
+                .container.content
+                    h1.title(style="text-align: center") No updates Found
+                    figure.image 
+                        img(src="/images/noupdates.png")
+                    p
+                        a(href=`/update/${treeid}`) click here  
+                        | to make an update
+
+
+
 
 block scripts 
