--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -13,7 +13,7 @@ div(id='navbar-container')
         .navbar-end.navbar-menu#navbar-links
             a.navbar-item#home(href="/") Home
             a.navbar-item#profile(href="#") My profile 
-            //a.navbar-item#change-password(href="#") Change Password 
+            a.navbar-item#updates-navbar(href="#") Updates 
             a.navbar-item#logout(href="#") Log out 
             .buttons
               a.navbar-item#register(class="button is-primary") Register
