--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html
       meta(charset="UTF-8")
       meta(http-equiv='X-UA-Compatible', content='IE=edge')
       meta(name='viewport', content='width=device-width, initial-scale=1')
+      meta(name="theme-color" content="#25be3a")
+      link(rel="apple-touch-icon" href="/images/apple-touch.png")
     block css
       //link(rel='stylesheet', href='/css/bootstrap.min.css')
       link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css')
