Empty value error in update form cleared

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -46,7 +46,7 @@ block content
                                 input(type="password", id="match-password", placeholder="*******", class="input", required)
                                 span(class="icon is-small is-left")
                                     i(class="fa fa-lock")
-                            p.help#is-danger(style="display:none") Passwords don't match
+                            p.help.is-danger(style="display:none") Passwords don't match
                         .field.is-grouped(style="justify-content: flex-end")
                             .control
                                     button.button.is-link.is-light#modal-close Cancel 
