--- a/views/update.pug
+++ b/views/update.pug
@@ -29,7 +29,7 @@ block content
                                     input.input#caption(type="text", placeholder="Add a caption to the image", required)
                             .field 
                                 label(for="" class="checkbox") #[input(type='checkbox', id="issue", name='hidden', value=1, checked='')] Mark as Issue
-        
+                                p.help.is-danger(style="display:none") Please Enter all fields!
                             .field.is-grouped
                                 .control 
                                     button.button#cancel-upload Cancel
